--- a/brewery/style_bubble.html
+++ b/brewery/style_bubble.html
@@ -10,6 +10,8 @@ text {
 </style>
 <svg width="960" height="880"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="colorbrewer.min.js"></script>
 <script>
 
 var svg = d3.select("svg"),
@@ -17,7 +19,8 @@ var svg = d3.select("svg"),
 
 var format = d3.format(",d");
 
-var color = d3.scaleOrdinal(d3.schemeCategory20c);
+// var color = d3.scaleOrdinal(d3.schemeCategory20c);
+var color =  d3.scaleOrdinal().range(colorbrewer.Reds[8]);
 
 var pack = d3.pack()
     .size([width, width])
