style frames better

--- a/breweries.html
+++ b/breweries.html
@@ -44,7 +44,23 @@
 	<!--[if lt IE 9]>
 		<script src="js/html5shiv.js"></script>
 	<![endif]-->
+<style>
+.responsive {
+  position: relative;
+  padding-bottom: 56.2%;
+  height: 0;
+  margin: 10px 0;
+  overflow: hidden;
+}
 
+.responsive iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+</style>
 </head>
 
 <body id="home">
@@ -63,7 +79,7 @@
         <!-- /.container -->
 		<div class="col-xs-12 text-center abcen wow fadeIn">
 			<div class="button_down "> 
-				<a class="imgcircle wow bounceInUp" data-wow-duration="1.5s"  href="#whatis"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
+				<a class="imgcircle wow bounceInUp" data-wow-duration="1.5s"  href="#content"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
 			</div>
 		</div>
     </div>
@@ -91,11 +107,13 @@ According to The Brewers Association, the market for craft beer is ~21% of the e
 Notice below the spike in newly opened breweries in the last 10 years due to the rise of the Craft Beer Industry and the resurgence of various beer styles with a modern twist.  
 
 					</p>
-					<iframe src="articles/brewery/timeSeries.html" height="850" width="1100"></iframe>
 				</div>   
             </div>
         </div>
         <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/timeSeries.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
     </div>
 
 
@@ -115,11 +133,13 @@ Notice below the spike in newly opened breweries in the last 10 years due to the
 Because of the rise of the Craft Beer Industry, you'll also see a noticable geographical distribution in the United States.  Feel free to zoom.
 
 					</p>
-					<iframe src="articles/brewery/map.html" height="750" width="1100"></iframe>
 				</div>   
             </div>
         </div>
         <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/map.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
     </div>
 
 
@@ -139,11 +159,13 @@ Because of the rise of the Craft Beer Industry, you'll also see a noticable geog
 The number of breweries is projected to grow 5% next year.  That's a lot of IBUs.  
 
 					</p>
-					<iframe src="articles/brewery/gauge.html" height="250" width="800"></iframe>
 				</div>   
             </div>
         </div>
         <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/gauge.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
     </div>
 
 
@@ -161,11 +183,13 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
                     <p class="lead">
 
 					</p>
-					<iframe src="articles/brewery/bubbleStyle.html" height="1050" width="1100"></iframe>
 				</div>   
             </div>
         </div>
         <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/bubbleStyle.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
     </div>
 
 
@@ -183,11 +207,13 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
                     <p class="lead">
 
 					</p>
-					<iframe src="articles/brewery/bar.html" height="550" width="1100"></iframe>
 				</div>   
             </div>
         </div>
         <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/bar.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
     </div>
 
 
@@ -205,11 +231,13 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
                     <p class="lead">
 
 					</p>
-					<iframe src="articles/brewery/stream.html" height="650" width="1100"></iframe>
 				</div>   
             </div>
         </div>
         <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/stream.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
     </div>
 
 
