--- a/breweries.html
+++ b/breweries.html
@@ -77,11 +77,11 @@
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Craft Breweries & the IPA</h3>
 		</div>    
         <!-- /.container -->
-		<div class="col-xs-12 text-center abcen wow fadeIn">
+<!-- 		<div class="col-xs-12 text-center abcen wow fadeIn">
 			<div class="button_down "> 
 				<a class="imgcircle wow bounceInUp" data-wow-duration="1.5s"  href="#content"> <img class="img_scroll" src="img/icon/circle.png" alt=""> </a>
 			</div>
-		</div>
+		</div> -->
     </div>
 	
 	
