--- a/breweries.html
+++ b/breweries.html
@@ -164,7 +164,7 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
         </div>
         <!-- /.container -->
 		<div class="responsive">
-			<iframe class="embedly-embed" src="articles/brewery/gauge.html" width="500" height="300" scrolling="no" frameborder="0" allowfullscreen></iframe>
+			<iframe class="embedly-embed" src="articles/brewery/gauge.html" scrolling="no" frameborder="0" allowfullscreen></iframe>
 		</div>
     </div>
 
