--- a/breweries.html
+++ b/breweries.html
@@ -188,7 +188,7 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
         </div>
         <!-- /.container -->
 		<div class="responsive">
-			<iframe class="embedly-embed" src="articles/brewery/bubbleStyle.html" width="500" height="400" scrolling="no" frameborder="0" allowfullscreen></iframe>
+			<iframe class="embedly-embed" src="articles/brewery/bubbleStyle.html" scrolling="no" frameborder="0" allowfullscreen></iframe>
 		</div>
     </div>
 
