--- a/breweries.html
+++ b/breweries.html
@@ -228,6 +228,7 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
 					<div class="sub-title lead3">The Rise of the IPA</div>
+			                <div class="sub-title lead4">Hover over each band to see how many beers of each style were developed/produced.</div>
                     <p class="lead">
 
 					</p>
