--- a/breweries.html
+++ b/breweries.html
@@ -100,7 +100,7 @@
 					<div class="sub-title lead3">When were breweries established?</div>
                     <p class="lead">
 
-These days, beer drinkers seem to supplement traditional day-beer offerings like Miller, Coors, Budweiser, etc, ... with the more artisanal offerings of the Craft Brewer.  
+These days, beer drinkers seem to supplement traditional day-beer offerings (Miller, Coors, Budweiser, etc) with the more artisanal offerings of the Craft Brewer.  
 
 According to The Brewers Association, the market for craft beer is ~21% of the entire US beer market ($105.9 Billion).  24 Million Barrels of Craft Beer were produced in 2015 -> 18.4 pints of craft beer per person in the US.  
 
