--- a/breweries.html
+++ b/breweries.html
@@ -75,6 +75,7 @@
 		<div class="col-xs-12 text-center abcen1">
 			<h1 class="h1_home wow fadeIn" data-wow-delay="0.4s">The Current State of the Brewing Industry</h1>
 			<h3 class="h3_home wow fadeIn" data-wow-delay="0.6s">Craft Breweries & the IPA</h3>
+			<h5 class="h3_home wow fadeIn" data-wow-delay="0.6s">Ben Pleasanton</h5>
 		</div>    
         <!-- /.container -->
 <!-- 		<div class="col-xs-12 text-center abcen wow fadeIn">
