--- a/breweries.html
+++ b/breweries.html
@@ -94,7 +94,7 @@
             <div class="row">
 			
 				<div class="col-sm-4 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="articles/brewery/cask.png" alt="">
+                    <img class="img-responsive " src="articles/brewery/cask2.jpg" alt="">
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
