--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="row">
 			
 				<div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="articles/brewery/cask.png" alt="">
+                    <img class="img-responsive " src="articles/brewery/cask2.jpg" alt="">
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
