update main article post

--- a/breweries.html
+++ b/breweries.html
@@ -318,6 +318,54 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
     </div>
 
 
+    <div id ="content" class="content-section-a">
+
+        <div class="container">
+			
+            <div class="row">
+			
+				<div class="col-sm-1 pull-right wow fadeInRightBig">
+                </div>
+				
+                <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
+					<div class="sub-title lead3">Collaborations</div>
+                    <p class="lead">
+
+Breweries are increasingly collaborating in order to develop and expand their offerings and styles.  It's a great way to work together in a great industry and push each other outside of their brewing comfort zones.  It also can end up in creating an unexpected delicous brew.  
+The following data is based on breweries who have collaborated with at least one other brewery in their lifetime.  Hover over a node to see the brewery name.  Double click on a brewery to see which other breweries have collaborated.  
+
+					</p>
+				</div>   
+            </div>
+        </div>
+        <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/collaborationsBySize.html" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
+    </div>
+
+
+    <div id ="content" class="content-section-a">
+
+        <div class="container">
+			
+            <div class="row">
+			
+				<div class="col-sm-1 pull-right wow fadeInRightBig">
+                </div>
+				
+                <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
+					<div class="sub-title lead3">Six(teen) Degrees of Separation</div>
+				</div>   
+            </div>
+        </div>
+        <!-- /.container -->
+		<div class="responsive">
+			<iframe class="embedly-embed" src="articles/brewery/degreesOf.html" scrolling="no" frameborder="0" allowfullscreen></iframe>
+		</div>
+    </div>
+
+
 
 
 <!-- 
