--- a/index.html
+++ b/index.html
@@ -130,6 +130,32 @@
         <!-- /.container -->
     </div>
 
+	
+	<!-- Use it -->
+    <div id ="content" class="content-section-a">
+
+        <div class="container">
+			
+            <div class="row">
+			
+				<div class="col-sm-6 pull-right wow fadeInRightBig">
+                    <img class="img-responsive " src="articles/brewery/cask2.jpg" alt="">
+                </div>
+				
+                <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
+                    <h3 class="section-heading">Craft Brewery Collaborations</h3>
+					<div class="sub-title lead3"></div>
+                    <p class="lead">
+						In this article, I look at the breweries that collaborate together to create a new brew.
+					</p>
+
+					 <p><a class="btn btn-embossed btn-primary" href="breweries.html" role="button">View Details</a> 
+				</div>   
+            </div>
+        </div>
+        <!-- /.container -->
+    </div>
+
 
 	<div id="contact" class="content-section-a">
 		<div class="container">
