--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 						In this article, I look at the breweries that collaborate together to create a new brew.
 					</p>
 
-					 <p><a class="btn btn-embossed btn-primary" href="breweries.html" role="button">View Details</a> 
+					 <p><a class="btn btn-embossed btn-primary" href="breweries_collaboration.html" role="button">View Details</a> 
 				</div>   
             </div>
         </div>
