--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	</nav> 
 	
 	<!-- What is -->
-	<div id="whatis" class="content-section-b" style="border-top: 0">
+<!-- 	<div id="whatis" class="content-section-b" style="border-top: 0">
 		<div class="container">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
@@ -102,7 +102,7 @@
 				
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	
 	<!-- Use it -->
