--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
 				<ul class="nav navbar-nav">
 					
-					<li class="menuItem"><a href="#whatis">What is?</a></li>
+					<li class="menuItem"><a href="resume/index.html">Resume</a></li>
 					<li class="menuItem"><a href="#content">Content</a></li>
 					<li class="menuItem"><a href="#contact">Contact</a></li>
 				</ul>
