updated with resume

--- a/breweries.html
+++ b/breweries.html
@@ -113,7 +113,7 @@ Notice below the spike in newly opened breweries in the last 10 years due to the
         </div>
         <!-- /.container -->
 		<div class="responsive">
-			<iframe class="embedly-embed" src="articles/brewery/timeSeries.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
+			<iframe class="embedly-embed" src="articles/brewery/timeSeries.html" width="600" height="400" scrolling="yes" frameborder="0" allowfullscreen></iframe>
 		</div>
     </div>
 
@@ -241,32 +241,6 @@ The number of breweries is projected to grow 5% next year.  That's a lot of IBUs
 			<iframe class="embedly-embed" src="articles/brewery/stream.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
 		</div>
     </div>
-
-
-    <div id ="content" class="content-section-a">
-
-        <div class="container">
-			
-            <div class="row">
-			
-				<div class="col-sm-1 pull-right wow fadeInRightBig">
-                </div>
-				
-                <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-					<div class="sub-title lead3">Specific Ingredients</div>
-			                <div class="sub-title lead4">Cascade hops is the number one ingredient in beers.  Hover over the bars to see the details.</div>
-                    <p class="lead">
-
-					</p>
-				</div>   
-            </div>
-        </div>
-        <!-- /.container -->
-		<div class="responsive">
-			<iframe class="embedly-embed" src="articles/brewery/ingredientsIndiv.html" width="500" height="281" scrolling="no" frameborder="0" allowfullscreen></iframe>
-		</div>
-    </div>
-
 
     <div id ="content" class="content-section-a">
 
