--- a/index.html
+++ b/index.html
@@ -113,23 +113,22 @@
             <div class="row">
 			
 				<div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="articles/brewery/cask2.jpg" alt="">
+                    <img class="img-responsive " src="https://static1.squarespace.com/static/586383b0579fb33a8cf49761/586b63082e69cfdbc240436b/58ce1906e6f2e19aff892bf4/1490231974648/collab17_logo_primary.eps.jpg?format=2500w" alt="">
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">The Current State of the Brewing Industry</h3>
-					<div class="sub-title lead3">Data Mining & Visualizing Craft Beer</div>
+                    <h3 class="section-heading">Craft Brewery Collaborations (2017)</h3>
+					<div class="sub-title lead3"></div>
                     <p class="lead">
-						In this article, I show the rise of the Craft Brewery and the IPA.
+						In this article, I look at the breweries that collaborate together to create a new brew.
 					</p>
 
-					 <p><a class="btn btn-embossed btn-primary" href="breweries.html" role="button">View Details</a> 
+					 <p><a class="btn btn-embossed btn-primary" href="breweries_collaboration.html" role="button">View Details</a> 
 				</div>   
             </div>
         </div>
         <!-- /.container -->
     </div>
-
 	
 	<!-- Use it -->
     <div id ="content" class="content-section-a">
@@ -143,13 +142,13 @@
                 </div>
 				
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Craft Brewery Collaborations</h3>
-					<div class="sub-title lead3"></div>
+                    <h3 class="section-heading">The Current State of the Brewing Industry (2017)</h3>
+					<div class="sub-title lead3">Data Mining & Visualizing Craft Beer</div>
                     <p class="lead">
-						In this article, I look at the breweries that collaborate together to create a new brew.
+						In this article, I show the rise of the Craft Brewery and the IPA.
 					</p>
 
-					 <p><a class="btn btn-embossed btn-primary" href="breweries_collaboration.html" role="button">View Details</a> 
+					 <p><a class="btn btn-embossed btn-primary" href="breweries.html" role="button">View Details</a> 
 				</div>   
             </div>
         </div>
