--- a/resume/index.html
+++ b/resume/index.html
@@ -32,7 +32,7 @@
 				<div class="row slidup">
 					<div class="col-sm-6 pt-3 pb-5  text-light">
 						<h1 class="pt-2 pb-0 name">Ben Pleasanton</h1>
-						<p class="pb-2 summary">Dedicated data junkie with experience in the private and public sector.  Focused on creating a productive and scalable data-driven culture.</p>
+						<p class="pb-2 summary">Dedicated data science engineer with experience in the private and public sector.  Focused on creating a productive and scalable data-driven culture.</p>
 						<input type="button" class="btn btn-outline-secondary btn-main" value="Learn More" onclick="location.href = '#resume';">
 					</div>
 					<div class="col-sm-6"></div>
@@ -134,11 +134,31 @@
 											</li>
 											<li class="content-text pt-2">Pioneered ETL using Luigi data pipelines to integrate Redshift, PostgreSQL, Hive, Spark, Teradata and internal/external API data into scalable data infrastructure that remained performant and elastic
 											</li>
-											<li class="content-text pt-2">DDeveloped Ensemble Model to predict restaurant make time and reduce costs by 20% along with increasing efficiency in the dispatcher algorithm & track performance - Patent Pending
+											<li class="content-text pt-2">Developed Ensemble Model to predict restaurant make time and reduce costs by 20% along with increasing efficiency in the dispatcher algorithm & track performance - Patent Pending
 											</li>
 											<li class="content-text pt-2">DPrototyped a simulation framework in order to test automatic dispatching strategies
 											</li>
 										</ul>
+									</div>
+								</div>
+<!-- 								<div class="media">
+									<div class="media-left">
+										<a href="#">
+											<img class="media-object pr-3 pt-1" style="max-width: 90px;max-height=90px;" src="https://upload.wikimedia.org/wikipedia/commons/5/54/Blank_Canvas_on_Transparent_Background.png" alt="...">
+										</a>
+									</div>
+									<div class="media-body">
+										<img class="media-object pr-3 pt-2" style="max-width:600px;" src="https://cloud.githubusercontent.com/assets/5361725/20863095/2fd489e2-b98e-11e6-8fa7-23caadef3f07.png" alt="...">
+									</div>
+								</div> -->
+								<div class="media">
+									<div class="media-left">
+										<a href="#">
+											<img class="media-object pr-3 pt-1" style="max-width: 90px;max-height=90px;" src="https://upload.wikimedia.org/wikipedia/commons/5/54/Blank_Canvas_on_Transparent_Background.png" alt="...">
+										</a>
+									</div>
+									<div class="media-body">
+										<img class="media-object pr-3 pt-2" style="max-width:900px;" src="https://cloud.githubusercontent.com/assets/5361725/20054036/213f01b8-a4a9-11e6-8b6e-2ea4478f61a4.gif" alt="...">
 									</div>
 								</div>
 								<hr>
