--- a/resume/index.html
+++ b/resume/index.html
@@ -306,6 +306,24 @@
 								<div class="w-100"></div>
 								<div class="col-5">RDS</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">Athena</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">Kinesis</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">Lambda</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">Cloudformation</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">SQS</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">SNS</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
 							</div>
 							<hr class="hr-light">
 							<h2 class="pb-3">Container Orchestration</h2>
