--- a/resume/index.html
+++ b/resume/index.html
@@ -78,6 +78,35 @@
 						<div class="mb-4">
 							<h2 class="mb-4"></h2>
 							<div class="mb-4 short-line-height">
+
+								<!-- Experience 1 -->
+								<!-- ============ -->
+								<div class="media">
+									<div class="media-left">
+										<a href="#">
+											<img class="media-object pr-3 pt-1" style="max-width: 90px;" src="https://cdn-images-1.medium.com/max/1600/0*E-PHnL7IsVH4Fd1S.png" alt="...">
+										</a>
+									</div>
+								<div class="media">
+									<div class="media-left">
+										<a href="#">
+											<img class="media-object pr-3 pt-1" style="max-width: 90px;" src="https://i.vimeocdn.com/portrait/20588366_300x300" alt="...">
+										</a>
+									</div>
+									<div class="media-body">
+										<ul class="list-unstyled">
+											<li><span class="badge badge-date">2018 - Present</span></li>
+											<li><a href="" target="_blank">Various Clients</a></li>
+											<li><b>Independent Consultant - Data Science Engineer</b></li>
+											<li class="content-text pt-2"></li>
+											<li class="content-text pt-2">
+											</li>
+										</ul>
+									</div>
+								</div>
+								<hr>
+
+
 								<!-- Experience 1 -->
 								<!-- ============ -->
 								<div class="media">
