--- a/resume/index.html
+++ b/resume/index.html
@@ -84,19 +84,19 @@
 								<div class="media">
 									<div class="media-left">
 										<a href="#">
-											<img class="media-object pr-3 pt-1" style="max-width: 90px;" src="https://cdn-images-1.medium.com/max/1600/0*E-PHnL7IsVH4Fd1S.png" alt="...">
+											<img class="media-object pr-3 pt-1" style="max-width: 90px;" src="https://camo.githubusercontent.com/6cdbbbf2317d175a45a9306f78d59cc8efa8d845/68747470733a2f2f75706c6f61642e77696b696d656469612e6f72672f77696b6970656469612f636f6d6d6f6e732f7468756d622f622f62342f4d6170626f785f4c6f676f2e7376672f3132383070782d4d6170626f785f4c6f676f2e7376672e706e67" alt="...">
 										</a>
 									</div>
+								</div>
 								<div class="media">
 									<div class="media-left">
 										<a href="#">
-											<img class="media-object pr-3 pt-1" style="max-width: 90px;" src="https://i.vimeocdn.com/portrait/20588366_300x300" alt="...">
+											<img class="media-object pr-3 pt-1" style="max-width: 90px;" src="https://assets.themuse.com/uploaded/companies/990/small_logo.png?v=6fe260ca7e9a0090d6a5c595ef39e6a16c578bc28a4427a91a2d22038f53e74a" alt="...">
 										</a>
 									</div>
 									<div class="media-body">
 										<ul class="list-unstyled">
 											<li><span class="badge badge-date">2018 - Present</span></li>
-											<li><a href="" target="_blank">Various Clients</a></li>
 											<li><b>Independent Consultant - Data Science Engineer</b></li>
 											<li class="content-text pt-2"></li>
 											<li class="content-text pt-2">
