--- a/resume/index.html
+++ b/resume/index.html
@@ -165,7 +165,7 @@
 											</li>
 											<li class="content-text pt-2">Developed Ensemble Model to predict restaurant make time and reduce costs by 20% along with increasing efficiency in the dispatcher algorithm & track performance - Patent Pending
 											</li>
-											<li class="content-text pt-2">DPrototyped a simulation framework in order to test automatic dispatching strategies
+											<li class="content-text pt-2">Prototyped a simulation framework in order to test automatic dispatching strategies
 											</li>
 										</ul>
 									</div>
