--- a/resume/index.html
+++ b/resume/index.html
@@ -321,6 +321,9 @@
 							<h2 class="pb-3">AWS</h2>
 							<div class="row short-line-height">
 								<div class="w-100"></div>
+								<div class="col-5">Cloudformation</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-70"></div></div></div>
+								<div class="w-100"></div>
 								<div class="col-5">S3</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
 								<div class="w-100"></div>
