--- a/resume/index.html
+++ b/resume/index.html
@@ -33,6 +33,7 @@
 					<div class="col-sm-6 pt-3 pb-5  text-light">
 						<h1 class="pt-2 pb-0 name">Ben Pleasanton</h1>
 						<p class="pb-2 summary">Dedicated data science engineer with experience in the private and public sector.  Focused on creating a productive and scalable data-driven culture.</p>
+						<p class="pb-2 summary">Current as of 12-20-2018.</p>
 						<input type="button" class="btn btn-outline-secondary btn-main" value="Learn More" onclick="location.href = '#resume';">
 					</div>
 					<div class="col-sm-6"></div>
@@ -43,17 +44,20 @@
 					<div class="mb-4">
 						<div class="mb-4 short-line-height">
 							<div class="w-100"></div>
-							<div class="col-5">Data Engineering</div>
+							<div class="col-5">Data Engineering / Big Data</div>
 							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
 							<div class="w-100"></div>
 							<div class="col-5">Deep Learning</div>
 							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 							<div class="w-100"></div>
+							<div class="col-5">Geo Spatial</div>
+							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+							<div class="w-100"></div>
 							<div class="col-5">Data Visualization</div>
 							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
 							<div class="w-100"></div>
 							<div class="col-5">Statistics</div>
-							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-70"></div></div></div>
+							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
 							<div class="col-5">Graph Theory</div>
 							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
 							<div class="col-5">Data Mining</div>
@@ -99,7 +103,13 @@
 											<li><span class="badge badge-date">2018 - Present</span></li>
 											<li><b>Independent Consultant - Data Science Engineer</b></li>
 											<li class="content-text pt-2"></li>
-											<li class="content-text pt-2">
+											<li class="content-text pt-2">Engineered algorithm for geospatial conflation of multiple large scale datasets (1 billion + features)
+											</li>
+											<li class="content-text pt-2">Led development on graph traversal convolutional reinforcement neural network for road detection
+											</li>
+											<li class="content-text pt-2">Architected statistical & spatial sampling library for QC evaluation of arbitrary geospatial datasets.
+											</li>
+											<li class="content-text pt-2">Resolved GPU CUDA platform infrastructure whoes for internal data science research
 											</li>
 										</ul>
 									</div>
@@ -124,6 +134,8 @@
 											<li class="content-text pt-2">Developed deep learning benchmark and optimization abstraction suite including CNN, RNN, LSTM, Seq2Seq, auto-encoder, and graph algorithms to drive hardware and software scalability across multiple domains and distributed heterogeneous architectures
 											</li>
 											<li class="content-text pt-2">Developed Bayesian optimization API for scalable hyper-parameter tuning 
+											</li>
+											<li class="content-text pt-2">Implemented RL algorithm for device placement using Seq2Seq based optimization of graph runtime
 											</li>
 										</ul>
 									</div>
@@ -232,11 +244,11 @@
 								<div class="col-5">Python</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
 								<div class="w-100"></div>
-								<div class="col-5">Go</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
-								<div class="w-100"></div>
 								<div class="col-5">Scala</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">Go</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-50"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">C++</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-30"></div></div></div>
@@ -245,7 +257,7 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-30"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Javascript</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-50"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Ruby</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-20"></div></div></div>
@@ -257,15 +269,15 @@
 							<h2 class="pb-3"></h2>
 							<div class="row short-line-height">
 								<div class="col-5">Tensorflow</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Scikit-learn</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Numpy</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="col-5">Luigi</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Airflow</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-40"></div></div></div>
@@ -275,10 +287,10 @@
 							<div class="row short-line-height">
 								<div class="w-100"></div>
 								<div class="col-5">Spark</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-95"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Hive</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">HBase</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-40"></div></div></div>
@@ -287,7 +299,7 @@
 								<div class="col-5">HDFS</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="col-5">Yarn</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-65"></div></div></div>
 							</div>
 							<hr class="hr-light">
 							<h2 class="pb-3">Visualization</h2>
@@ -296,11 +308,10 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-70"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Looker</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Tableau</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
-
 								<div class="w-100"></div>
 								<div class="col-5">Splunk</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
@@ -312,6 +323,9 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">MySQL</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">Presto</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Redis</div>
@@ -328,13 +342,16 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Redshift</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">EC2</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">ECS</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+								<div class="w-100"></div>
+								<div class="col-5">EKS</div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-50"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">RDS</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
@@ -343,13 +360,10 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Kinesis</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-50"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Lambda</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
-								<div class="w-100"></div>
-								<div class="col-5">Cloudformation</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-50"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">SQS</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
@@ -373,7 +387,7 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">GPU</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
 								<div class="col-5">FPGA</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-20"></div></div></div>
 								<div class="w-100"></div>
