--- a/resume/index.html
+++ b/resume/index.html
@@ -33,7 +33,7 @@
 					<div class="col-sm-6 pt-3 pb-5  text-light">
 						<h1 class="pt-2 pb-0 name">Ben Pleasanton</h1>
 						<p class="pb-2 summary">Dedicated data science engineer with experience in the private and public sector.  Focused on creating a productive and scalable data-driven culture.</p>
-						<p class="pb-2 summary">Current as of 12-20-2018.</p>
+						<p class="pb-2 summary">Current as of 12-20-2018</p>
 						<input type="button" class="btn btn-outline-secondary btn-main" value="Learn More" onclick="location.href = '#resume';">
 					</div>
 					<div class="col-sm-6"></div>
@@ -51,7 +51,7 @@
 							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 							<div class="w-100"></div>
 							<div class="col-5">Geo Spatial</div>
-							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-70"></div></div></div>
 							<div class="w-100"></div>
 							<div class="col-5">Data Visualization</div>
 							<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
@@ -107,7 +107,7 @@
 											</li>
 											<li class="content-text pt-2">Led development on graph traversal convolutional reinforcement neural network for road detection
 											</li>
-											<li class="content-text pt-2">Architected statistical & spatial sampling library for QC evaluation of arbitrary geospatial datasets.
+											<li class="content-text pt-2">Architected statistical & spatial sampling library for QC evaluation of arbitrary geospatial datasets
 											</li>
 											<li class="content-text pt-2">Resolved GPU CUDA platform infrastructure whoes for internal data science research
 											</li>
@@ -245,7 +245,7 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-100"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Scala</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Go</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-50"></div></div></div>
@@ -272,7 +272,7 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Scikit-learn</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Numpy</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
@@ -290,7 +290,7 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-95"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">Hive</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">HBase</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-40"></div></div></div>
@@ -299,7 +299,7 @@
 								<div class="col-5">HDFS</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="col-5">Yarn</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-65"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-60"></div></div></div>
 							</div>
 							<hr class="hr-light">
 							<h2 class="pb-3">Visualization</h2>
@@ -348,7 +348,7 @@
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-90"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">ECS</div>
-								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-75"></div></div></div>
+								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-80"></div></div></div>
 								<div class="w-100"></div>
 								<div class="col-5">EKS</div>
 								<div class="col-7"><div class="skillBarContainer"><div class="skillBarValue value-50"></div></div></div>
